--- a/css/style.css
+++ b/css/style.css
@@ -305,7 +305,7 @@ h2 {
     letter-spacing: 1.2px;
     margin-top: 0;
     margin-bottom: 20px; }
-  .intro__info button {
+  .intro__info a.btn {
     width: 130px; }
 
 .intro__title {
@@ -353,7 +353,7 @@ h2 {
 
 @media (max-width: 786px) {
   .intro {
-    background-image: url("../img/intro-mobile2.jpg");
+    background-image: url("../img/intro_cupcak.jpg");
     background-position: center;
     min-height: 55vh; }
   .intro__info {
